# yasmineoss

./: .gitignore  LICENSE  bun.lockb  dockercomposeCPU.yml  dockercomposeGPU.yml  dockerfile.CPU  package.json
.cache/41/: cache.db
.github/workflows/: deploy.yml
backend/c++/: CMakeLists.txt  dockerfile
backend/c++/src/: CMakeLists.txt  WebSocketHandler.cpp  WebSocketHandler.hpp  index.html  main.cpp  request_handler.cpp  request_handler.hpp
backend/python/: .gitignore  dockerfile.CPU  dockerfile.GPU  main.py  pyproject.toml  requirements.txt
backend/python/src/: main copy 2.py  main copy 3.py  main copy.py  main.py
backend/python/src/ais/: HBH_AI.py  base.py  letter_counter_ai.py  letter_counter_guidance.py  palbob.py  palbobmemory.py
backend/python/src/ais/temp_palbob/: a  b  c
backend/python/src/modules/: FIM_Agent.py  autobuikdagent.py  basicautogenagent.py  basicguidancegen.py  basicoutlines copy.py  basicoutlines.py  basicoutlinesv1.py  cleaner.py  customHtmlGeneratorTool.py  dspytest.py  guidanceollama.py  guidancez.py  langchainy copy.py  langchainy.py  langchainy2.py  langroidtest?.py  outlinespy.py  outlinespyt.py  outlinespyv.py  palbob.py  python_exec.py  sglangy.py  test.py  tts.py
backend/python/src/modules/agents/: coder.py  dependency_tracker.py  linter.py  planner.py
backend/python/src/modules/temp_palbob/: aa
backend/python/src/modules/tools/: VenvManager.py  base.py  python_editor.py
backend/rust/: Cargo.toml  dockerfile
backend/rust/src/: main.rs
backend/typescript/: dockerfile  package.json
backend/typescript/src/: handler.ts  server.ts
frontend/: .gitignore  AUDIO_VISUALIZER_README.md  HYBRID_WORKER_OPTIMIZATION.md  HybridCSSRenderer.md  PERFORMANCE_OPTIMIZATIONS.md  bun.lockb  dockerfile  entrypoint.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
frontend/public/images/: crab-nebula.ktx2  main.js
frontend/public/pages/: homepage--.js  homepage-compact.js  homepage.js  projects.js
frontend/public/sounds/: viri.wav:Zone.Identifier
frontend/public/styles/: smooth-navigation.css
frontend/public/workers/: Hamza.js  Hamza02.js  bobprojects.js  botbasicbehavior.js  car.js  claude.js  claude2.js  dynamicloader.js  environmentbot.js  (+17 more)
frontend/src/: SimpleCLI.ts  main copy.ts  main.ts  main2.ts  style.css
tempdir/: hellowrdy.txt
tempdir/environment_manager/: welcomehtml.txt
tempdir/testy/: vision.json
tempdir/testyte/: main.py
tempdir/uitester/: test.txt
(+103 files in other folders)
