cmake_minimum_required(VERSION 3.2)

set(SIMPLEHTTPSERVER_PROJECT_NAME        "c++backend")
set(SIMPLEHTTPSERVER_VERSION_MAJOR       "0")
set(SIMPLEHTTPSERVER_VERSION_MINOR       "0")
set(SIMPLEHTTPSERVER_VERSION_PATCH       "1")

set(SIMPLEHTTPSERVER_VERSION
    "${SIMPLEHTTPSERVER_VERSION_MAJOR}.${SIMPLEHTTPSERVER_VERSION_MINOR}.${SIMPLEHTTPSERVER_VERSION_PATCH}")
set(SIMPLEHTTPSERVER_NAME_VERSION
    "${SIMPLEHTTPSERVER_PROJECT_NAME} v${SIMPLEHTTPSERVER_VERSION} (${SIMPLEHTTPSERVER_VERSION_REVISION})")


project(${SIMPLEHTTPSERVER_PROJECT_NAME})

set(SIMPLEHTTPSERVER_SRC_DIR ${PROJECT_SOURCE_DIR}/src)

add_subdirectory(src)