[package]
name = "rust-docker-web"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
edition = "2021"

[dependencies]
 
 
warp = "0.3"
reqwest = {version = "0.11.24" , features = ["blocking" , "json"]}
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
 
[profile.release]
panic = 'abort'

[profile.dev]
debug = 0
